--- a/package.json
+++ b/package.json
@@ -1,32 +1,25 @@
 {
   "name": "newin",
   "version": "1.0.0",
-  "description": "Opens a new Window or Tab on WSL Windows Terminal or KDE Konsole",
-
+  "description": "Open new window(s)/tab(s) & execute bash command(s) on WSL Windows Terminal or KDE Konsole",
   "scripts": {
     "****************** A CLI Global Setup *****": "",
-
     "################# Running ": "",
-
     "### dev: build & test in watch, in separate Konsoles!": "",
     "dev": "newin 'npm run start:watch' 'npm run test:watch'",
     "start": "npm run build",
     "start:watch": "npm run build:watch",
-
     "################# Testing ": "",
     "test": "NODE_ENV=test npx jest --coverage --runInBand --detectOpenHandles --verbose --forceExit",
     "test:ci": "NODE_ENV=test npx jest --ci --reporters=default --reporters=jest-junit --runInBand --detectOpenHandles --forceExit",
     "test:watch": "NODE_ENV=test npx jest --runInBand --watchAll --no-cache",
     "test:coverage": "NODE_ENV=test nyc --reporter=lcov --reporter=html npm test && nyc report",
-
     "################# Build & Typescript": "",
     "build": "npm-run-all build:ts",
     "build:ts": "mkdir -p dist && npx tsc --listEmittedFiles --project tsconfig.json",
     "build:watch": "mkdir -p dist && npx tsc --listEmittedFiles --watch --project tsconfig.json",
-
     "################# Clean, Chores and installing": "",
     "clean": "npx rimraf dist coverage tmp .nyc_output result",
-
     "################# Formatting & Linting": "",
     "format": "npm-run-all prettier lint:noFail prettier",
     "prettier": "npx prettier --write \"**/*.{ts,js,json}\"",
@@ -38,11 +31,32 @@
     "commander": "^8.3.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.4.0",
+    "@types/node": "^16.18.11",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "eslint": "^8.33.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-tsdoc": "^0.2.17",
+    "eslint-plugin-unicorn": "^45.0.2",
+    "jest": "^29.4.1",
+    "jest-extended": "^3.2.3",
+    "jest-simple-dot-reporter": "^1.0.5",
+    "jest-standard-reporter": "^2.0.0",
     "nodemon": "^2.0.21",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
     "rimraf": "^4.1.2",
     "ts-jest": "^29.0.5",
+    "ts-loader": "^9.4.2",
     "typescript": "^4.9.5"
   },
   "files": [
