--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,32 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "alwaysStrict": true,
     "baseUrl": "./src",
-    "outDir": "dist"
+    "declaration": true,
+    "emitDecoratorMetadata": true,
+    //    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "importHelpers": true,
+    "incremental": true,
+    "lib": ["es5", "es6", "esnext.asynciterable", "esnext"],
+    "module": "CommonJS",
+    "moduleResolution": "node",
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": false,
+    "noImplicitReturns": true,
+    "noImplicitThis": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "outDir": "./dist",
+    "resolveJsonModule": true,
+    "sourceMap": true,
+    "strictNullChecks": false,
+    "target": "es2018",
+    "allowJs": true,
+    "checkJs": false,
+    "skipLibCheck": true
   },
   "include": ["src/**/*.ts", "src/**/*.json"],
   "exclude": ["node_modules", "dist", "DRAFT"],
