--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newin",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "CLI command to open new window(s)/tab(s) & execute bash command(s) on WSL Windows Terminal or KDE Konsole",
   "scripts": {
     "****************** A CLI Global Setup *****": "",
@@ -16,8 +16,8 @@
     "test:coverage": "NODE_ENV=test nyc --reporter=lcov --reporter=html npm test && nyc report",
     "################# Build & Typescript": "",
     "build": "npm-run-all build:ts",
-    "build:ts": "mkdir -p dist && npx tsc --listEmittedFiles --project tsconfig.json",
-    "build:watch": "mkdir -p dist && npx tsc --listEmittedFiles --watch --project tsconfig.json",
+    "build:ts": "npx mkdirp dist && npx tsc --listEmittedFiles --project tsconfig.json",
+    "build:watch": "npx mkdirp dist && npx tsc --listEmittedFiles --watch --project tsconfig.json",
     "################# Clean, Chores and installing": "",
     "clean": "npx rimraf dist coverage tmp .nyc_output result",
     "################# Formatting & Linting": "",
@@ -51,6 +51,7 @@
     "jest-extended": "^3.2.3",
     "jest-simple-dot-reporter": "^1.0.5",
     "jest-standard-reporter": "^2.0.0",
+    "mkdirp": "2.1.5",
     "nodemon": "^2.0.21",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
